--- a/user-frontend/src/App.css
+++ b/user-frontend/src/App.css
@@ -18,6 +18,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -40,3 +41,20 @@
 .read-the-docs {
   color: #888;
 }
+
+
+/*
+body {
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+  background: #fff;
+  color: #222;
+}
+
+#root {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0 auto;
+  text-align: left;
+}
+*/
