--- a/user-frontend/src/index.css
+++ b/user-frontend/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,20 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+*/
+
+body {
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+  background: #fff;
+  color: #222;
+}
+
+#root {
+  min-height: 100vh;
+  /* Puedes ajustar el padding si lo deseas */
+  padding: 0;
+  margin: 0 auto;
+  text-align: left;
 }
